# cerebras-sdk

./: .env  .gitignore  Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  main.rs  models.rs
