[package]
name = "cerebras-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.12.24", features = ["http2", "rustls-tls", "json"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = {version = "1.48.0", features = ["full"]}
