[package]
name = "cerebras-sdk"
version = "0.1.3"
edition = "2024"
description = "A Rust SDK for the Cerebras Inference API"
license = "MIT"
repository = "https://github.com/munz0312/cerebras-sdk"
keywords = ["cerebras", "ai", "api", "sdk", "llm"]
categories = ["api-bindings"]

[dependencies]
reqwest = {version = "0.12.24", features = ["http2", "rustls-tls", "json"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread"]}
